# diff_physics

./: README.md  pyproject.toml
src/diff_physics/: __init__.py
src/diff_physics/common/: __init__.py  entity.py  system.py  util.py
src/diff_physics/editor/: __init__.py  renderable.py
src/diff_physics/energy/: __init__.py  base.py  string.py  string.typ
src/diff_physics/objective/: __init__.py  base.py  equal.py
src/diff_physics/pcg/: __init__.py
src/diff_physics/solver/: PD.py  PD.typ  __init__.py  base.py
src/taichi_hint/: argpack.py  common.py  scope.py  specialize.py  struct.py  template.py  transform_annotations.py  util.py
src/taichi_hint/wrap/: __init__.py  common.py  linear_algbra.py  ndarray.py
src/taichi_lib/: common.py
tests/: __init__.py
tests/playground/: __init__.py
