[project]
name = "diff_physics"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "whitingyan", email = "1712428442@qq.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../taichi#egg=taichi",
]
